--- a/Customers/ACME/Site.Acme/appsettings.json
+++ b/Customers/ACME/Site.Acme/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Site.Acme-9e1d3511-b003-4c1b-97fd-e33fe107d2cd;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\;Database=WeeERP;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
