--- a/UI/Themes/Wee.Core.Theme/project.json
+++ b/UI/Themes/Wee.Core.Theme/project.json
@@ -9,7 +9,8 @@
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.1",
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Wee.UI.Core": "1.0.0-*",
-    "Wee.UI.Core.Services": "1.0.0-*"
+    "Wee.UI.Core.Services": "1.0.0-*",
+    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.1.0"
   },
 
   "tools": {
